get_filename_component(TIS_PKG_DIR "${CMAKE_CURRENT_SOURCE_DIR}/../tis" ABSOLUTE)
set(_engine_sources module.cc TISManyBodyForceCompute.cc)
set(_engine_headers TISForces.h MixedPrecisionCompat.h)
hoomd_add_module(_engine SHARED ${_engine_sources} ${_engine_headers} NO_EXTRAS)
target_link_libraries(_engine PUBLIC HOOMD::_hoomd HOOMD::_md)

# ForceReal probe (mixed-precision fork exposes native ForceReal without the macro)
get_target_property(_hoomd_inc_dirs HOOMD::_hoomd INTERFACE_INCLUDE_DIRECTORIES)
find_file(HOOMD_MATH_HEADER NAMES hoomd/HOOMDMath.h PATHS ${_hoomd_inc_dirs} NO_DEFAULT_PATH)
if(HOOMD_MATH_HEADER)
    file(READ "${HOOMD_MATH_HEADER}" _hoomd_math_src)
    string(FIND "${_hoomd_math_src}" "ForceReal" _fr_type_pos)
    string(FIND "${_hoomd_math_src}" "define HOOMD_HAS_FORCEREAL" _fr_macro_pos)
    if(NOT _fr_type_pos EQUAL -1 AND _fr_macro_pos EQUAL -1)
        message(STATUS "tis_engine: defining HOOMD_HAS_FORCEREAL")
        target_compile_definitions(_engine PRIVATE HOOMD_HAS_FORCEREAL)
    endif()
endif()
install(TARGETS _engine LIBRARY DESTINATION ${TIS_PKG_DIR})
